--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -3,6 +3,11 @@
     margin: 0;
 }
 
+/*all background that is normaly white is now barely not white xD*/
+html{
+    background-color: #e6e6e6;
+}
+
 body {
     overflow-x: hidden;
     font-family: 'Open Sans', sans-serif;
@@ -266,46 +271,6 @@ Home View Styles
     background-color: #0080ff;
     color: white;
 }
-
-/*
-Register
-*/
-/*
-.rg-master {
-    font-family: 'Playfair Display', serif;  
-}
-
-.rg-master h1, h5 {
-    text-shadow: .05em .05em 0 #d3d3d3;
-}
-
-.orgBG {
-  background: url('https://images3.alphacoders.com/853/thumb-1920-85305.jpg') no-repeat center center;
-  position: fixed;
-  width: 100%;
-  height: 300px; 
-  top:0;
-  left:0;
-  filter: blur(1.5px);
-  z-index: -1;
-}
-
-.jumbotron {
-  height: 300px;
-  color: white;
-  text-shadow: #444 0 1px 1px;
-  background:transparent;
-}*/
-
-/*
-Volunteer Profile Styles
-*/
-
-/*.vol-profile-cont {
-    background-color: #faebd7;
-    font-family: 'Playfair Display', serif;
-    box-shadow: 2px 2px 2px 1px rgb(0, 0, 0, 0.2) !important;
-}*/
 
 /*vol profile*/
 
