--- a/client/views/organizationProfile.html
+++ b/client/views/organizationProfile.html
@@ -41,70 +41,88 @@
               <td>{{ o.address }}</td>
               <td>{{ o.city }}</td>
               <td>{{ o.state }}</td>
-              <td>{{ o.startTime  }}</td>
+              <td>{{ o.startTime }}</td>
               <td>
                 <button class="btn btn-success btn-sm" ng-click="details(event)">Details</button>
                 <button class="btn btn-danger btn-sm" ng-click="delete(event)">Delete</button>
               </td>
             </tbody>
           </table>
-        </div
-      </div>
-      <div id="aboutThumbnail" class="thumbnail col-md-2 wow fadeInRight">
-        <div class="caption">
-          <h1>Past Events</h1>
-          <hr>
-          <p>{{ volunteer.events }}</p>
-          <p>{{ volunteer.events }}</p>
-          <p>{{ volunteer.events }}</p>
+        </div 
+        </div>
+        <div id="aboutThumbnail" class="thumbnail col-md-2 wow fadeInRight">
+          <div class="caption">
+            <h1>Past Events</h1>
+            <hr>
+            <p>{{ volunteer.events }}</p>
+            <p>{{ volunteer.events }}</p>
+            <p>{{ volunteer.events }}</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
 
-<!--MODAL INFO-->
-<div class="modal fade" id="createEventModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="form">
-    <div class="modal-content">
-      <!--Header-->
-      <div class="modal-header">
-        <h3 class="modal-title" id="exampleModalLabel">Create your new event!</h3>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+  <!--MODAL INFO-->
+  <div class="modal fade" id="createEventModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="form">
+      <div class="modal-content">
+        <!--Header-->
+        <div class="modal-header">
+          <h3 class="modal-title" id="exampleModalLabel">Create a new event!</h3>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-      </div>
-      <!--Body-->
-      <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <label for="recipient-name" class="form-control-label">Title:</label>
-            <input type="text" class="form-control" id="newTitle">
-          </div>
-          <div class="form-group">
-            <label for="newDescription" class="form-control-label">Description:</label>
-            <textarea class="form-control" id="newDescription"></textarea>
-          </div>
-          <div class="form-group">
-            <label for="newLocation" class="form-control-label">Location:</label>
-            <input type="text" class="form-control" id="newLocation">
-          </div>
-          <div class="form-group">
-            <label for="newStartTime" class="form-control-label">Start Time:</label>
-            <input type="time" class="form-control" id="newStartTime" placeholder="hour:minute:am/pm">
-          </div>
-          <div class="form-group">
-            <label for="newEndTime" class="form-control-label">End Time:</label>
-            <input type="time" class="form-control" id="newEndTime">
-          </div>
-
-        </form>
-      </div>
+        </div>
+        <!--Body-->
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="recipient-name" class="form-control-label">Title:</label>
+              <input type="text" class="form-control" id="newTitle" placeholder="Title of your event." ng-model="title">
+            </div>
+            <div class="form-group">
+              <label for="newDescription" class="form-control-label">Description:</label>
+              <textarea class="form-control" id="newDescription"placeholder="Describe what you need help with." ng-model="description"></textarea>
+            </div>
+            <!--row-->
+            <div class="row">
+              <div class="form-group col-sm-4">
+                <label for="newAddress" class="form-control-label">Address:</label>
+                <input type="text" class="form-control" id="newAddress" placeholder="123 South Ave" ng-model="address">
+              </div>
+              <div class="form-group col-sm-4">
+                <label for="newCity" class="form-control-label">City:</label>
+                <input type="text" class="form-control" id="newCity" placeholder="Birmingham" ng-model="city">
+              </div>
+              <div class="form-group col-sm-4">
+                <label for="newState" class="form-control-label">State:</label>
+                <input type="text" class="form-control" id="newState" placeholder="AL" ng-model="state">
+              </div>
+            </div>
+            <!--end row-->
+            <div class="row">
+              <div class="form-group col-sm-4">
+                <label for="newDate" class="form-control-label">Date:</label>
+                <input type="date" class="form-control" id="newDate" ng-model="date">
+              </div>
+              <div class="form-group col-sm-4">
+                <label for="newStartTime" class="form-control-label">Start Time:</label>
+                <input type="time" class="form-control" id="newStartTime" ng-model="startTime">
+              </div>
+              <div class="form-group col-sm-4">
+                <label for="newEndTime" class="form-control-label">End Time:</label>
+                <input type="time" class="form-control" id="newEndTime" ng-model="endTime">
+              </div>
+            </div>
+            <form>
+        </div>
+      <!--end body-->
       <!--footer-->
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" ng-click="editProfile()">Add event</button>
+        <button type="button" class="btn btn-primary" ng-click="createEvent()">Add event</button>
       </div>
     </div>
   </div>
