--- a/client/views/volunteerProfile.html
+++ b/client/views/volunteerProfile.html
@@ -2,11 +2,12 @@
 
 <div id="volHeader" class="volHeader">
     <div class="container">
+
         <div id="firstRow" class="row">
             <img class="profilePic" ng-src="{{volunteer.image}}" alt="users picture">
         </div>
         <div id="secondRow" class="row">
-            <div id="aboutThumbnail" class="thumbnail col-md-3 wow fadeInLeft">
+            <div id="aboutThumbnail" class="thumbnail col-md-3">
                 <div class="caption">
                     <h2>{{ volunteer.name }}</h2>
                     <hr>
@@ -18,32 +19,90 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="thumbnail wow fadeInUp">
+                <div class="thumbnail">
                     <h1>Upcoming Events</h1>
                     <hr>
-                    <buttton ng-click="findEvents()" class="btn btn-danger">Search Events</buttton>
-                </div>
-            </div>
-            <div id="aboutThumbnail" class="thumbnail col-md-3 wow fadeInRight">
-                <div class="caption">
-                    <h1>Past Events</h1>
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <tbody ng-repeat="e in volEvents">
-                                    <td>{{ e.organizationName}}</td>
-                                    <td>{{ e.title}}</td>
-                                    <td>{{ e.description}}</td>
-                                    <td>{{ e.date | date:'fullDate'}}</td>
-                                    <td>{{ e.organizationCity}}, {{ e.organizationState}} </td>
-                                    <td>{{ e.totalHours}}</td>
-                                </tbody>
+                                <th>Organization</th>
+                                <th>Activity</th>
+                                <th>Date</th>
+                                <th>Location</th>
+                                <th>Total Hours</th>
+                                <th></th>
                             </tr>
                         </thead>
-
+                        <tbody ng-repeat="e in volEvents">
+                            <td>{{ e.organizationName}}</td>
+                            <td>{{ e.title}}</td>
+                            <td>{{ e.date | date:'fullDate'}}</td>
+                            <td>{{ e.organizationCity}}, {{ e.organizationState}} </td>
+                            <td>{{ e.totalHours}}</td>
+                            <td><button class="btn btn-success btn-sm" data-toggle="modal" data-target="#detailsModal" ng-click="details(event)">See Details</button></td>
+                            <!--<td><button class="btn btn-success btn-sm" ng-click="details(event)">Details</button></td>-->
+                        </tbody>
+                    </table>
+                    <buttton ng-click="findEvents()" class="btn btn-danger">Search Events</buttton>
+                </div>
+            </div>
+            <div id="aboutThumbnail" class="thumbnail col-md-3">
+                <div class="caption">
+                    <h1>Past Events</h1>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+
+
+<!--Modal Info For More Details-->
+<div id="detailsModal" class="modal" role="dialog">
+    <div class="modal-dialog modal-lg">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">More details for event </h4>
+            </div>
+            <div class="modal-body">
+                <!--table head-->
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Organization</th>
+                            <th>Activity</th>
+                            <th>Date</th>
+                            <th>Address</th>
+                            <th>Location</th>
+                            <th>Description</th>
+                            <th>Start Time</th>
+                            <th>End Time</th>
+                            <th>Total Hours</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <!--table body-->
+                    <tbody ng-repeat="e in volEvents">
+                        <td>{{ e.organizationName}}</td>
+                        <td>{{ e.title}}</td>
+                        <td>{{ e.date | date:'fullDate'}}</td>
+                        <td>{{ e.address}}</td>
+                        <td>{{ e.organizationCity}}, {{ e.organizationState}} </td>
+                        <td>{{ e.description}}</td>
+                        <td>{{ e.startTime}}</td>
+                        <td>{{ e.endTime}}</td>
+                        <td>{{ e.totalHours}}</td>
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
     </div>
 </div>
 
