--- a/client/views/events.html
+++ b/client/views/events.html
@@ -1,47 +1,48 @@
+
+
+
 <main-nav></main-nav>
+<br>
+<br>
+<br>
+<br>
 
-<!DOCTYPE html>
-<html>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <div class="row text-center">
+                    <h1>Upcoming Events to <br> Volunteer For:</h1>
+                </div>
+                <br>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Description</th>
+                            <th>Help Needed</th>
+                            <th>Date</th>
+                            <th>Start Time</th>
+                            <th>End Time</th>
+                            <th>Total Hours</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody ng-repeat="x in upcomingEvents">
+                        <td>{{ x.title }}</td>
+                        <td>{{ x.description }}</td>
+                        <td>{{ x.helpNeeded }}</td>
+                        <td>{{ x.date | date:'shortDate'}}</td>
+                        <td>{{ x.startTime }}</td>
+                        <td>{{ x.endTime }}</td>
+                        <td>{{ x.totalHours }}</td>
+                        <td><button class="btn btn-success" ng-click="volunteer(event)">Volunteer</button></td>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div>
 
-<body>
-
-    <div ng-app="myApp" ng-controller="EventController">
-
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Description</th>
-                    <th>Help Needed</th>
-                    <th>Date</th>
-                    <th>Start Time</th>
-                    <th>End Time</th>
-                    <th>Total Hours</th>
-                </tr>
-            </thead>
-            <tbody ng-repeat="x in names">
-                <td>{{ x.title }}</td>
-                <td>{{ x.description }}</td>
-                <td>{{ x.helpNeeded }}</td>
-                <td>{{ x.date }}</td>
-                <td>{{ x.startTime }}</td>
-                <td>{{ x.endTime }}</td>
-                <td>{{ x.totalHours }}</td>
-            </tbody>
-        </table>
 
     </div>
 
-    <script>
-        var app = angular.module('myApp', []);
-        app.controller('EventController', function ($scope, $http) {
-            $http.get("")
-                .then(function (response) { $scope.title = response.data.records; });
-        });
-
-    </script>
-
-</body>
-
-</html>
