--- a/client/views/organizationProfile.html
+++ b/client/views/organizationProfile.html
@@ -6,7 +6,7 @@
       <img class="profilePic" ng-src="{{ organization.image }}" alt="users picture">
     </div>
     <div id="secondRow" class="row">
-      <div id="aboutThumbnail" class="thumbnail col-md-3 wow fadeInLeft">
+      <div id="aboutThumbnail" class="thumbnail col-md-2 wow fadeInLeft">
         <div class="caption">
           <h3>{{ organization.organizationName }}</h3>
           <p>{{ organization.address }}</p>
@@ -43,25 +43,43 @@
               <td>{{ o.state }}</td>
               <td>{{ o.startTime }}</td>
               <td>
-                <button class="btn btn-success btn-sm" data-toggle="modal" data-target="#detailsModal" ng-click="details(event)">See Details</button>
+                <button class="btn btn-success btn-sm" data-toggle="modal" data-target="#detailsModal" ng-click="details(o)">See More Details</button>
                 <!--<button class="btn btn-success btn-sm" ng-click="details(event)">Details</button>-->
                 <!--<button class="btn btn-danger btn-sm" style=margin-top:7px data-toggle="modal" data-target="#manageEventModal">Manage Event</button>-->
                 <button type="button" class="btn btn-danger" style=margin-top:7px data-toggle="modal" data-target="#manageEventModal">Manage Event</button>
               </td>
             </tbody>
           </table>
-        </div </div>
-        <div id="aboutThumbnail" class="thumbnail col-md-2 wow fadeInRight">
-          <div class="caption">
-            <h1>Past Events</h1>
-            <hr>
-          </div>
+        </div>
+      </div>
+      <div id="aboutThumbnail" class="thumbnail col-md-3">
+        <div class="caption">
+          <h1>Past Events</h1>
+          <hr>
+          <table>
+            <thead>
+              <tr>
+                <th>Organization</th>
+                <th>Activity</th>
+                <th>Date</th>
+                <th>Total Hours</th>
+              </tr>
+            </thead>
+            <tbody ng-repeat="p in pastEvents" style="margin:0 5px 0 5px;">
+              <td>{{ p.organizationName}}</td>
+              <td>{{ p.title}}</td>
+              <td>{{ p.date | date:'shortDate' }}</td>
+              <td class="text-center">{{ p.totalHours }}</td>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
   </div>
 </div>
 </div>
+
+
 
 <!--NEW EVENT MODAL INFO-->
 <div class="modal fade" id="createEventModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -127,10 +145,9 @@
   </div>
 </div>
 
+
 <!--Manage Event Modal Info-->
 
-
-<!--MODAL INFO-->
 <div class="modal fade" id="manageEventModal" tabindex="-1" role="dialog" aria-labelledby="manageEventModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="form">
     <div class="modal-content">
@@ -146,40 +163,40 @@
         <form>
           <div class="form-group">
             <label for="recipient-name" class="form-control-label">Title:</label>
-            <input type="text" class="form-control" id="newTitle" ng-model="title">
+            <input type="text" class="form-control" id="newTitle" ng-model="singleEvent.title">
           </div>
           <div class="form-group">
             <label for="newDescription" class="form-control-label">Description:</label>
-            <textarea class="form-control" id="newDescription" placeholder="Describe what you need help with." ng-model="description"></textarea>
+            <textarea class="form-control" id="newDescription" placeholder="Describe what you need help with." ng-model="singleEvent.description"></textarea>
           </div>
           <!--row-->
           <div class="row">
             <div class="form-group col-sm-4">
               <label for="newAddress" class="form-control-label">Address:</label>
-              <input type="text" class="form-control" id="newAddress" placeholder="123 South Ave" ng-model="address">
+              <input type="text" class="form-control" id="newAddress" placeholder="123 South Ave" ng-model="singleEvent.address">
             </div>
             <div class="form-group col-sm-4">
               <label for="newCity" class="form-control-label">City:</label>
-              <input type="text" class="form-control" id="newCity" placeholder="Birmingham" ng-model="city">
+              <input type="text" class="form-control" id="newCity" placeholder="Birmingham" ng-model="singleEvent.city">
             </div>
             <div class="form-group col-sm-4">
               <label for="newState" class="form-control-label">State:</label>
-              <input type="text" class="form-control" id="newState" placeholder="AL" ng-model="state">
+              <input type="text" class="form-control" id="newState" placeholder="AL" ng-model="singleEvent.state">
             </div>
           </div>
           <!--end row-->
           <div class="row">
             <div class="form-group col-sm-4">
               <label for="newDate" class="form-control-label">Date:</label>
-              <input type="date" class="form-control" id="newDate" ng-model="date">
+              <input type="date" class="form-control" id="newDate" ng-model="singleEvent.date">
             </div>
             <div class="form-group col-sm-4">
               <label for="newStartTime" class="form-control-label">Start Time:</label>
-              <input type="time" class="form-control" id="newStartTime" ng-model="startTime">
+              <input type="time" class="form-control" id="newStartTime" ng-model="singleEvent.startTime">
             </div>
             <div class="form-group col-sm-4">
               <label for="newEndTime" class="form-control-label">End Time:</label>
-              <input type="time" class="form-control" id="newEndTime" ng-model="endTime">
+              <input type="time" class="form-control" id="newEndTime" ng-model="singleEvent.endTime">
             </div>
           </div>
         </form>
@@ -231,7 +248,7 @@
             <td>{{ o.title}}</td>
             <td>{{ o.date | date:'fullDate'}}</td>
             <td>{{ o.address}}</td>
-            <td>{{ o.organizationCity}}, {{ e.organizationState}} </td>
+            <td>{{ o.city}}, {{o.state}} </td>
             <td>{{ o.description}}</td>
             <td>{{ o.startTime}}</td>
             <td>{{ o.endTime}}</td>
