adds volunteering for event functionality

--- a/client/views/events.html
+++ b/client/views/events.html
@@ -35,7 +35,7 @@
                         <td>{{ x.startTime }}</td>
                         <td>{{ x.endTime }}</td>
                         <td>{{ x.totalHours }}</td>
-                        <td><button class="btn btn-success" ng-click="volunteer(event)">Volunteer</button></td>
+                        <td><button class="btn btn-success" ng-click="volunteer(x)">Volunteer</button></td>
                     </tbody>
                 </table>
             </div>
