--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -343,6 +343,11 @@ Home View Styles
     padding: 10px 5px 10px;
     margin: -3px 0 0 5px;
 }
+
+.event-anchor {
+    text-decoration: none;
+    color: black !important;
+}
 /*end footer*/
 
 /*for tables*/
