added footer and contact at bottom of views

--- a/client/views/editOrganizationProfile.html
+++ b/client/views/editOrganizationProfile.html
@@ -135,3 +135,17 @@
     </div>
     </div>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<contact-area> </contact-area>
+<footer> </footer>
