--- a/client/views/editVolunteerProfile.html
+++ b/client/views/editVolunteerProfile.html
@@ -1,5 +1,9 @@
 <volunteer-nav></volunteer-nav>
-
+<br>
+<br>
+<br>
+<br>
+<br>
 <div class="container rg-master-1">
     <div class="row">
       
@@ -114,3 +118,18 @@
     </div>
     </div>
 </div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<contact-area> </contact-area>
+<footer> </footer>
