--- a/client/views/organizationProfile.html
+++ b/client/views/organizationProfile.html
@@ -36,7 +36,7 @@
               </tr>
             </thead>
             <tbody ng-repeat="o in orgEvents">
-              <td>{{ o.date | date:'fullDate'}}</td>
+              <td>{{ o.date | date:'shortDate'}}</td>
               <td>{{ o.title }}</td>
               <td>{{ o.address }}</td>
               <td>{{ o.city }}</td>
