--- a/client/views/organizationProfile.html
+++ b/client/views/organizationProfile.html
@@ -41,12 +41,12 @@
               <td>{{ o.address }}</td>
               <td>{{ o.city }}</td>
               <td>{{ o.state }}</td>
-              <td>{{ o.startTime }}</td>
+              <td>{{ o.startTime |date:'hh:mm a'}}</td>
               <td>
                 <button class="btn btn-success btn-sm" data-toggle="modal" data-target="#detailsModal" ng-click="details(o)">See More Details</button>
                 <!--<button class="btn btn-success btn-sm" ng-click="details(event)">Details</button>-->
                 <!--<button class="btn btn-danger btn-sm" style=margin-top:7px data-toggle="modal" data-target="#manageEventModal">Manage Event</button>-->
-                <button type="button" class="btn btn-danger" style=margin-top:7px data-toggle="modal" data-target="#manageEventModal">Manage Event</button>
+                <button type="button" class="btn btn-danger" style=margin-top:7px data-toggle="modal" data-target="#manageEventModal" ng-click="grabEvent(o)">Manage Event</button>
               </td>
             </tbody>
           </table>
@@ -97,40 +97,44 @@
         <form>
           <div class="form-group">
             <label for="recipient-name" class="form-control-label">Title:</label>
-            <input type="text" class="form-control" id="newTitle" placeholder="Title of your event." ng-model="title">
+            <input type="text" class="form-control" id="newTitle" placeholder="Title of your event." ng-model="event.title">
           </div>
           <div class="form-group">
             <label for="newDescription" class="form-control-label">Description:</label>
-            <textarea class="form-control" id="newDescription" placeholder="Describe what you need help with." ng-model="description"></textarea>
+            <textarea class="form-control" id="newDescription" placeholder="Describe what you need help with." ng-model="event.description"></textarea>
           </div>
           <!--row-->
           <div class="row">
             <div class="form-group col-sm-4">
               <label for="newAddress" class="form-control-label">Address:</label>
-              <input type="text" class="form-control" id="newAddress" placeholder="123 South Ave" ng-model="address">
+              <input type="text" class="form-control" id="newAddress" placeholder="123 South Ave" ng-model="event.address">
             </div>
             <div class="form-group col-sm-4">
               <label for="newCity" class="form-control-label">City:</label>
-              <input type="text" class="form-control" id="newCity" placeholder="Birmingham" ng-model="city">
+              <input type="text" class="form-control" id="newCity" placeholder="Birmingham" ng-model="event.city">
             </div>
             <div class="form-group col-sm-4">
               <label for="newState" class="form-control-label">State:</label>
-              <input type="text" class="form-control" id="newState" placeholder="AL" ng-model="state">
+              <input type="text" class="form-control" id="newState" placeholder="AL" ng-model="event.state">
             </div>
           </div>
           <!--end row-->
           <div class="row">
-            <div class="form-group col-sm-4">
+            <div class="form-group col-sm-3">
               <label for="newDate" class="form-control-label">Date:</label>
-              <input type="date" class="form-control" id="newDate" ng-model="date">
+              <input type="date" class="form-control" id="newDate" ng-model="event.date">
             </div>
-            <div class="form-group col-sm-4">
+            <div class="form-group col-sm-3">
               <label for="newStartTime" class="form-control-label">Start Time:</label>
-              <input type="time" class="form-control" id="newStartTime" ng-model="startTime">
+              <input type="time" class="form-control" id="newStartTime" ng-model="event.startTime">
             </div>
-            <div class="form-group col-sm-4">
+            <div class="form-group col-sm-3">
               <label for="newEndTime" class="form-control-label">End Time:</label>
-              <input type="time" class="form-control" id="newEndTime" ng-model="endTime">
+              <input type="time" class="form-control" id="newEndTime" ng-model="event.endTime">
+            </div>
+            <div class="form-group col-sm-3">
+              <label for="newHelpNeeded" class="form-control-label">Volunteers Needed:</label>
+              <input type="number" class="form-control" id="newHelpNeeded" ng-model="event.helpNeeded">
             </div>
           </div>
           <form>
@@ -173,21 +177,21 @@
           <div class="row">
             <div class="form-group col-sm-4">
               <label for="newAddress" class="form-control-label">Address:</label>
-              <input type="text" class="form-control" id="newAddress" placeholder="123 South Ave" ng-model="singleEvent.address">
+              <input type="text" class="form-control" id="newAddress" ng-model="singleEvent.address">
             </div>
             <div class="form-group col-sm-4">
               <label for="newCity" class="form-control-label">City:</label>
-              <input type="text" class="form-control" id="newCity" placeholder="Birmingham" ng-model="singleEvent.city">
+              <input type="text" class="form-control" id="newCity" ng-model="singleEvent.city">
             </div>
             <div class="form-group col-sm-4">
               <label for="newState" class="form-control-label">State:</label>
-              <input type="text" class="form-control" id="newState" placeholder="AL" ng-model="singleEvent.state">
+              <input type="text" class="form-control" id="newState" ng-model="singleEvent.state">
             </div>
           </div>
           <!--end row-->
           <div class="row">
             <div class="form-group col-sm-4">
-              <label for="newDate" class="form-control-label">Date:</label>
+              <label for="newDate" class="form-control-label">Date (YYYY-MM-DD):</label>
               <input type="date" class="form-control" id="newDate" ng-model="singleEvent.date">
             </div>
             <div class="form-group col-sm-4">
@@ -205,8 +209,8 @@
       <!--footer-->
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Discard All Changes</button>
-        <button type="button" class="btn btn-danger" ng-click="">DELETE EVENT</button>
-        <button type="button" class="btn btn-primary" ng-click="">Save Changes</button>
+        <button type="button" class="btn btn-danger" ng-click="delete()">DELETE EVENT</button>
+        <button type="button" class="btn btn-primary" ng-click="update(singleEvent)">Save Changes</button>
       </div>
     </div>
   </div>
