--- a/client/views/organizationNav.html
+++ b/client/views/organizationNav.html
@@ -1,27 +1,38 @@
-    <!-- navbar -->
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <!-- toggle effect and navbar brand -->
+<!--  orgNav  -->
+<!--  this pnly has 'All events' 'About Us' And 'My Profile' that drops down 'View Profile', 'Edit Profile', and 'Log Out'-->
+
+<!--if "isOrg" is true, this nav bar will be shown-->
+<div id="myNavbar" class="navbar navbar-default navbar-fixed-top" ng-model="isOrg" role="navigation">
+    <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#thing-collapse" aria-expanded="false">
-        <span class="sr-only">Toggle Navigation</span> 
-        <span class="icon-bar"></span>
-      </button>
+                <span class="sr-only">Toggle Navigation</span> 
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <a href="/" class="grab navbar-brand">LinkTank</a>
         </div>
-        <!-- menu items -->
-        <div class="collapse navbar-collapse navbar-right" id="thing-collapse">
-            <ul class="nav navbar-nav">
+        <div class="navbar-collapse collapse navbar-right" id="thing-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/events">All Events</a></li>
+                <li><a href="#">About Us</a></li>
                 <li class="dropdown">
+                    <!--click sign in - drops once-->
                     <a href="#" class="dropdown-toggle menu-item" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        {{ organization.organizationName }}<span class="caret"></span>
+                        My Profile<span class="caret"></span>
+                    <!--<a href="#" class="dropdown-toggle menu-item" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        {{ volunteer.volunteerName }}<span class="caret"></span>
+                    </a>    -->
                     </a>
+                    <!--shows dropdown-->
                     <ul class="dropdown-menu">
-                        <li><a class="menu-item" href="/organizationProfile">Profile</a></li>
-                        <li><a class="menu-item" href-"#" ng-click="logout()">Logout</a></li>
+                        <li><a ng-href="/organization_profile/{{o.organizationid}}">View Profile</a></li>
+                        <li><a ng-href="/edit_organization_profile/{{o.organizationid}}">Edit Profile</a></li>
+                        <li><a ng-href="/" ng-click="logout()">Log Out</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
     </div>
-</nav>
+</div>
