--- a/client/views/organizationProfile.html
+++ b/client/views/organizationProfile.html
@@ -105,17 +105,21 @@
           </div>
           <!--row-->
           <div class="row">
-            <div class="form-group col-sm-4">
+            <div class="form-group col-sm-3">
               <label for="newAddress" class="form-control-label">Address:</label>
               <input type="text" class="form-control" id="newAddress" placeholder="123 South Ave" ng-model="event.address">
             </div>
-            <div class="form-group col-sm-4">
+            <div class="form-group col-sm-3">
               <label for="newCity" class="form-control-label">City:</label>
               <input type="text" class="form-control" id="newCity" placeholder="Birmingham" ng-model="event.city">
             </div>
-            <div class="form-group col-sm-4">
+            <div class="form-group col-sm-3">
               <label for="newState" class="form-control-label">State:</label>
               <input type="text" class="form-control" id="newState" placeholder="AL" ng-model="event.state">
+            </div>
+            <div class="form-group col-sm-3">
+              <label for="newHelpNeeded" class="form-control-label">Volunteers Needed:</label>
+              <input type="number" class="form-control" id="newHelpNeeded" ng-model="event.helpNeeded">
             </div>
           </div>
           <!--end row-->
@@ -133,8 +137,8 @@
               <input type="time" class="form-control" id="newEndTime" ng-model="event.endTime">
             </div>
             <div class="form-group col-sm-3">
-              <label for="newHelpNeeded" class="form-control-label">Volunteers Needed:</label>
-              <input type="number" class="form-control" id="newHelpNeeded" ng-model="event.helpNeeded">
+              <label for="newTotalHours" class="form-control-label">Total Hours:</label>
+              <input type="number" class="form-control" id="newTotalHours" ng-model="event.totalHours">
             </div>
           </div>
           <form>
@@ -143,7 +147,7 @@
       <!--footer-->
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" ng-click="createEvent()">Add event</button>
+        <button type="button" class="btn btn-primary" ng-click="createEvent(event)">Add event</button>
       </div>
     </div>
   </div>
