--- a/client/views/events.html
+++ b/client/views/events.html
@@ -11,7 +11,8 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="row text-center">
-                    <h1>Upcoming Events to <br> Volunteer For:</h1>
+                    <h1 ng-if="user" >Upcoming Events to <br> Volunteer For:</h1>
+                    <h1 ng-if="!user"> Sign In or <span ></span> To View Events</h1>
                 </div>
                 <br>
                 <caption>All Events</caption>
