--- a/client/views/mainNav.html
+++ b/client/views/mainNav.html
@@ -7,12 +7,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="grab navbar-brand">LinkTank</a>
+            <a ng-href="/" class="grab navbar-brand">LinkTank</a>
         </div>
         <div class="navbar-collapse collapse navbar-right" id="thing-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <!--IF YOU ARE NOT A USER THEN THIS WILL BE SHOW!-->
-                <li class="dropdown" ng-if="!user">
+                <li class="dropdown" ng-show="!user">
                     <!--click sign in - drops once-->
                     <a href="#" class="dropdown-toggle menu-item" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         Sign In<span class="caret"></span>
@@ -45,11 +45,11 @@
                 <!--IF NOT A USER, THIS WILL NOT BE SHOWN!-->
                 <li><a href="/register" ng-if="!user">Sign Up</a></li>
                 <li><a href="/events">View All Events</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="/">About Us</a></li>
                 <!--This Profile DropDown Should Not Be Shown Unless Logged In as org or vol-->
                 <li class="dropdown" ng-if="user">
                     <!--click on profile - drops down-->
-                    <a href="#" class="dropdown-toggle menu-item" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <a  class="dropdown-toggle menu-item" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         My Profile<span class="caret"></span>
                     </a>
                     <!--the dropdown-->
@@ -57,7 +57,7 @@
                         <li><a href="/">View Profile</a></li>
                         <li><a href="/edit_volunteer_profile/{{v.volunteerid}}" ng-show="user.role == 'Volunteer'">Edit Vol Profile</a></li>
                         <li><a href="/edit_organization_profile/{{o.organizationid}}" ng-show="user.role == 'Organization'">Edit Org Profile</a></li>
-                        <li><a href="/" ng-if="user"> Logout </a></li> 
+                        <li><a href="/" ng-click="logout()" ng-if="user"> Logout </a></li> 
                         
 
 
