--- a/client/views/footer.html
+++ b/client/views/footer.html
@@ -6,10 +6,10 @@
             </div>
             <div class="col-md-3">
                 <h4 class="wow fadeInUp">Contact Us</h4>
-                <p><i class="fa fa-home" aria-hidden="true"></i> dis where my adi foes</p>
-                <p><i class="fa fa-envelope" aria-hidden="true"></i> email.me@idk.com</p>
-                <p><i class="fa fa-phone" aria-hidden="true"></i> numba</p>
-                <p><i class="fa fa-globe" aria-hidden="true"></i> link to this shit</p>
+                <p><i class="fa fa-home" aria-hidden="true"></i> LinkTank </p>
+                <p><i class="fa fa-envelope" aria-hidden="true"></i> linkTank@gmail.com</p>
+                <p><i class="fa fa-phone" aria-hidden="true"></i> 1(800)888-8888</p>
+                <p><i class="fa fa-globe" aria-hidden="true"></i> linkTank.com</p>
             </div>
             <div class="col-md-3">
                 <h4>About</h4>
